[project]
name = "rl-stoch-dss"
version = "0.1.0"
description = "NEPSE Universal RL Architecture: Stochastic Pullback Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.0,<3",
    "plotly>=6.5.2",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.7.1",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]
