[project]
name = "nepserl"
version = "0.1.0"
description = "NEPSE RL Stochastic Pullback Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.0,<3",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.7.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
